---
title: edu.nust.engine.logger
config:
  look: classic
  layout: elk
  flowchart:
    curve: linear
  class:
    defaultRenderer: dagre-wrapper
---
classDiagram
  class GameLogger
  class ColorPair
  class LogProgress
namespace edu.nust.engine.logger.enums {
  class LogFormats
  class Format
  class LogLevel <<enumeration>>
  class LogProgressType <<enumeration>>
}
namespace edu.nust.engine.logger.logback {
  class ANSIStripper
  class ColoredConsoleAppender
}
GameLogger --> LogProgress : uses
GameLogger --> LogLevel : uses
GameLogger --> LogProgressType : uses
LogProgress --> ColorPair : uses
LogProgress --> GameLogger : uses
LogFormats --> Format : uses